# FinalProjectPW

./: .gitmodules  Cargo.toml  Rocket.toml
public/: BG Page.css  Login dan Sign In.html  README.md  about_us.html  home_page.html  index.html  log.html  login.css  login.html  profile.html  script.js  sign_in.html  style.css
public/static/: style.css
src/: crud.rs  lib.rs  main.rs  schema.rs
templates/: about_us.html.tera  index.html.tera  log.html.tera  login.html.tera  profile.html.tera  script.js  signup.html.tera
