[package]
name = "FinalProjectPW"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "=0.5.0-rc.3", features = ["json", "secrets"]}
# liquid = {git = "https://github.com/cobalt-org/liquid-rust"}
# actix-web = "4"
tera = {git = "https://github.com/Keats/tera"}
# serde = {git = "https://github.com/serde-rs/serde", features = ["derive"]}
serde = { version = "1.0", features = ["derive"] }
# serde_json = {git = "https://github.com/serde-rs/json"}
reqwest = "0.11.14"
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
futures = "0.3.26"
html-escape = "0.2.13"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "macros", "chrono"] }
chrono = {version = "0.4.26", features = ["serde"]}

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["tera"]